--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -7,20 +8,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background: radial-gradient(ellipse at bottom, #0d1d31 0%, #0c0d13 100%);
   color: #fff;
-  padding: 0 80px;
+  /* padding: 0 80px; */
 }
 
-@media screen and (max-width: 600px) {
-  body {
-    padding: 0 30px;
-  }
-}
-
-@media screen and (max-width: 480px) {
-  body {
-    padding: 0 10px;
-  }
-}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
